QjackCtl - JACK Audio Connection Kit Qt GUI Interface 
-----------------------------------------------------

ChangeLog

GIT HEAD

- Turkish (tr) translation added (by Orkun Arapoglu, thanks).

- Updated copyright headers into the New Year (2024).


0.9.12  2023-09-09  An End-of-Summer'23 Release.

- Setup: disable Settings parameters altogether, except frames/period
  (aka. buffer-size) if running in the so called 'Active' pure-client
  mode (eg. under PipeWire's pw-jack substitution).

- Connections: Fixed an old JACK client/ports aliases malfunction,
  hopefully.

- Graph: Ctrl+left or middle-button click-dragging for panning, is
  now a lot smoother, hopefully.

- Graph: Click-dragging with the mouse middle-button is now used
  for panning only, not to start a selection anymore.

- Preppings to next development cycle (Qt >= 6.6)


0.9.11  2023-06-01  A Spring'23 Release.

- Graph: Soft incremental bounds constraints now imposed to all
  new and old nodes positioning.

- Prepping into the next development cycle (with Qt >= 6.5).


0.9.10  2023-03-23  An Early-Spring'23 Release.

- Setup: revert to previous settings when dismissing the dialog.

- Graph: Attempt to make port labels as short as possible.

- Graph: introducing touch pinch-gesture for zooming.


0.9.9  2022-12-28  An End-of-Year'22 Release.

- Graph: whether to draw connectors through or around nodes is a
  new user preference option (cf. View > Connect Through Nodes).

- Graph: Allow middle mouse button for grabbing and dragging the
  main canvas.

- Make up visual immediate feedback connectlons.


0.9.8  2022-10-03  An Early-Autumn'22 release.

- Graph: View / Repel Overlapping Nodes option added.

- Avoid nagging on D-BUS error messsage windows (or bubbles) when
  trying to start in pure JACK client mode (Active).

- Add current system user-name to the singleton/unique application
  instance identifier.

- Graph/Connect and Disconnect keyboard shortcuts added to existing