@@ -1,7 +1,7 @@
 // qjackctlGraph.cpp
 //
 /****************************************************************************
-   Copyright (C) 2003-2023, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2003-2024, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -1269,6 +1269,10 @@ qjackctlGraphCanvas::qjackctlGraphCanvas ( QWidget *parent )
 
 	QGraphicsView::setResizeAnchor(QGraphicsView::NoAnchor);
 	QGraphicsView::setDragMode(QGraphicsView::NoDrag);
+
+	const QPalette& pal = QGraphicsView::palette();
+	if (pal.base().color().value() > 192)
+		QGraphicsView::setBackgroundRole(QPalette::Mid);
 
 	m_editor = new QLineEdit(this);
 	m_editor->setFrame(false);
